# ai-content-generation

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: spec-closer.toml  spec-debugger.toml  spec-epic-reviewer.toml  spec-explorer.toml  spec-manager.toml  spec-programmer-fast.toml  spec-programmer-high.toml  spec-programmer.toml  spec-reviewer.toml
.githooks/: pre-commit  pre-push
.github/workflows/: agent-system-validation.yml
.specify/: autopilot.yml  feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.specify/workstreams/: E001-execution-domain.yml  E002-workflow-engine.yml  E003-artifact-storage.yml  E004-mvp-modules.yml  E005-api-approvals.yml  E006-tests-quality.yml  M001-backend-foundation.yml  M002-mvp-workflows.yml  M003-integration-quality.yml  schema.md
backend/: requirements.txt
backend/app/: __init__.py
backend/tests/: __init__.py  conftest.py
docs/: INDEX.md  local-autopilot.md
docs/decisions/: 0001-modular-workflow-engine.md
docs/spec-kit/: 00-product-context.md  01-source-repo-synthesis.md  02-domain-model-draft.md  03-module-contracts-draft.md  (+3 more)
scripts/: LOCAL_AUTOPILOT_CODEX_PROMPTS_PL.md  create_local_autopilot_branch.cmd  create_local_autopilot_branch.ps1  install-git-hooks.ps1  install-git-hooks.sh  run-local-autopilot.cmd  run-local-autopilot.ps1  setup-dev.ps1  setup-dev.sh
(+114 files in other folders)
